--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ steps:
   inputs:
     versionSpec: '18'
   displayName: 'Install Node.js'
-- script: npm ci
-  displayName: 'npm ci'
+- script: npm install
+  displayName: 'npm install'
 - script: npx playwright install --with-deps
   displayName: 'Install Playwright browsers'
 - script: npx playwright test
